--- a/mvp/frontend_v2/index.html
+++ b/mvp/frontend_v2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Project Path Frontend MVP</title>
+    <title>ProjectPath Frontend</title>
   </head>
   <body>
     <div id="root"></div>
